--- a/public/posts/template/template/index.html
+++ b/public/posts/template/template/index.html
@@ -5,11 +5,11 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="robots" content="noindex, nofollow">
-<title>Roof Shade - Overview | Mike Ornstein</title>
-<meta name="keywords" content="House">
-<meta name="description" content="Project Overview A lot of work into these roof shades&hellip; this is a many part series">
+<title>Template Text! | Mike Ornstein</title>
+<meta name="keywords" content="Template">
+<meta name="description" content="Project Overview This is template text!">
 <meta name="author" content="">
-<link rel="canonical" href="http://localhost:1313/posts/house-projects/roof-shade/">
+<link rel="canonical" href="http://localhost:1313/posts/template/template/">
 <link crossorigin="anonymous" href="/assets/css/stylesheet.fc220c15db4aef0318bbf30adc45d33d4d7c88deff3238b23eb255afdc472ca6.css" integrity="sha256-/CIMFdtK7wMYu/MK3EXTPU18iN7/MjiyPrJVr9xHLKY=" rel="preload stylesheet" as="style">
 <link rel="icon" href="http://localhost:1313/favicon.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="http://localhost:1313/favicon-16x16.png">
@@ -18,7 +18,7 @@
 <link rel="mask-icon" href="http://localhost:1313/safari-pinned-tab.svg">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
-<link rel="alternate" hreflang="en" href="http://localhost:1313/posts/house-projects/roof-shade/">
+<link rel="alternate" hreflang="en" href="http://localhost:1313/posts/template/template/">
 <noscript>
     <style>
         #theme-toggle,
@@ -98,15 +98,20 @@
   <header class="post-header">
     
     <h1 class="post-title entry-hint-parent">
-      Roof Shade - Overview
+      Template Text!
+      <span class="entry-hint" title="Draft">
+        <svg xmlns="http://www.w3.org/2000/svg" height="35" viewBox="0 -960 960 960" fill="currentColor">
+          <path
+            d="M160-410v-60h300v60H160Zm0-165v-60h470v60H160Zm0-165v-60h470v60H160Zm360 580v-123l221-220q9-9 20-13t22-4q12 0 23 4.5t20 13.5l37 37q9 9 13 20t4 22q0 11-4.5 22.5T862.09-380L643-160H520Zm300-263-37-37 37 37ZM580-220h38l121-122-18-19-19-18-122 121v38Zm141-141-19-18 37 37-18-19Z" />
+        </svg>
+      </span>
     </h1>
-    <div class="post-meta"><span title='2019-06-11 00:00:00 +0000 +0000'>June 11, 2019</span>
+    <div class="post-meta"><span title='2024-07-04 00:00:00 +0000 +0000'>July 4, 2024</span>
 
 </div>
   </header> 
-<figure class="entry-cover"><a href="http://localhost:1313/posts/house-projects/roof-shade/images/sun_sails1.jpg" target="_blank"
-            rel="noopener noreferrer">
-        <img loading="eager" src="http://localhost:1313/posts/house-projects/roof-shade/images/sun_sails1.jpg" alt=""></a>
+<figure class="entry-cover"><a href="http://localhost:1313/images/template_cover.png" target="_blank"
+            rel="noopener noreferrer"><img loading="eager" src="http://localhost:1313/images/template_cover.png" alt=""></a>
         <p><!-- raw HTML omitted -->
 </p>
 </figure><div class="toc">
@@ -125,25 +130,20 @@
 </div>
 
   <div class="post-content"><h2 id="project-overview">Project Overview<a hidden class="anchor" aria-hidden="true" href="#project-overview">#</a></h2>
-<p>A lot of work into these roof shades&hellip; this is a many part series</p>
+<p>This is template text!</p>
 
 
   </div>
 
   <footer class="post-footer">
     <ul class="post-tags">
-      <li><a href="http://localhost:1313/tags/house/">House</a></li>
+      <li><a href="http://localhost:1313/tags/template/">Template</a></li>
     </ul>
 <nav class="paginav">
-  <a class="prev" href="http://localhost:1313/posts/template/template/">
-    <span class="title">« Prev</span>
-    <br>
-    <span>Template Text!</span>
-  </a>
-  <a class="next" href="http://localhost:1313/posts/house-projects/auto-roller-shades/">
+  <a class="next" href="http://localhost:1313/posts/house-projects/roof-shade/">
     <span class="title">Next »</span>
     <br>
-    <span>Auto Roller Shade</span>
+    <span>Roof Shade - Overview</span>
   </a>
 </nav>
 
