--- a/public/tags/template/index.html
+++ b/public/tags/template/index.html
@@ -5,11 +5,11 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="robots" content="noindex, nofollow">
-<title>Roof Shade - Overview | Mike Ornstein</title>
-<meta name="keywords" content="House">
-<meta name="description" content="Project Overview A lot of work into these roof shades&hellip; this is a many part series">
+<title>Template | Mike Ornstein</title>
+<meta name="keywords" content="">
+<meta name="description" content="">
 <meta name="author" content="">
-<link rel="canonical" href="http://localhost:1313/posts/house-projects/roof-shade/">
+<link rel="canonical" href="http://localhost:1313/tags/template/">
 <link crossorigin="anonymous" href="/assets/css/stylesheet.fc220c15db4aef0318bbf30adc45d33d4d7c88deff3238b23eb255afdc472ca6.css" integrity="sha256-/CIMFdtK7wMYu/MK3EXTPU18iN7/MjiyPrJVr9xHLKY=" rel="preload stylesheet" as="style">
 <link rel="icon" href="http://localhost:1313/favicon.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="http://localhost:1313/favicon-16x16.png">
@@ -18,7 +18,8 @@
 <link rel="mask-icon" href="http://localhost:1313/safari-pinned-tab.svg">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
-<link rel="alternate" hreflang="en" href="http://localhost:1313/posts/house-projects/roof-shade/">
+<link rel="alternate" type="application/rss+xml" href="http://localhost:1313/tags/template/index.xml">
+<link rel="alternate" hreflang="en" href="http://localhost:1313/tags/template/">
 <noscript>
     <style>
         #theme-toggle,
@@ -58,7 +59,7 @@
 </noscript>
 </head>
 
-<body class="" id="top">
+<body class="list" id="top">
 <script>
     if (window.matchMedia('(prefers-color-scheme: dark)').matches) {
         document.body.classList.add('dark');
@@ -92,62 +93,31 @@
         </ul>
     </nav>
 </header>
-<main class="main">
+<main class="main"> 
+<header class="page-header">
+  <h1>
+    Template
+  </h1>
+</header>
 
-<article class="post-single">
-  <header class="post-header">
-    
-    <h1 class="post-title entry-hint-parent">
-      Roof Shade - Overview
-    </h1>
-    <div class="post-meta"><span title='2019-06-11 00:00:00 +0000 +0000'>June 11, 2019</span>
-
-</div>
-  </header> 
-<figure class="entry-cover"><a href="http://localhost:1313/posts/house-projects/roof-shade/images/sun_sails1.jpg" target="_blank"
-            rel="noopener noreferrer">
-        <img loading="eager" src="http://localhost:1313/posts/house-projects/roof-shade/images/sun_sails1.jpg" alt=""></a>
-        <p><!-- raw HTML omitted -->
-</p>
-</figure><div class="toc">
-    <details  open>
-        <summary accesskey="c" title="(Alt + C)">
-            <span class="details">Table of Contents</span>
-        </summary>
-
-        <div class="inner"><ul>
-                <li>
-                    <a href="#project-overview" aria-label="Project Overview">Project Overview</a>
-                </li>
-            </ul>
-        </div>
-    </details>
-</div>
-
-  <div class="post-content"><h2 id="project-overview">Project Overview<a hidden class="anchor" aria-hidden="true" href="#project-overview">#</a></h2>
-<p>A lot of work into these roof shades&hellip; this is a many part series</p>
-
-
+<article class="post-entry tag-entry"> 
+<figure class="entry-cover"><img loading="lazy" src="http://localhost:1313/template_cover.png" alt="">
+</figure>
+  <header class="entry-header">
+    <h2 class="entry-hint-parent">Template Text!
+      <span class="entry-hint" title="Draft">
+        <svg xmlns="http://www.w3.org/2000/svg" height="20" viewBox="0 -960 960 960" fill="currentColor">
+          <path
+            d="M160-410v-60h300v60H160Zm0-165v-60h470v60H160Zm0-165v-60h470v60H160Zm360 580v-123l221-220q9-9 20-13t22-4q12 0 23 4.5t20 13.5l37 37q9 9 13 20t4 22q0 11-4.5 22.5T862.09-380L643-160H520Zm300-263-37-37 37 37ZM580-220h38l121-122-18-19-19-18-122 121v38Zm141-141-19-18 37 37-18-19Z" />
+        </svg>
+      </span>
+    </h2>
+  </header>
+  <div class="entry-content">
+    <p>Project Overview Trials and tribulations of sketch to finished carbon car body for Carnegie Mellon Racing’s #57 car.</p>
   </div>
-
-  <footer class="post-footer">
-    <ul class="post-tags">
-      <li><a href="http://localhost:1313/tags/house/">House</a></li>
-    </ul>
-<nav class="paginav">
-  <a class="prev" href="http://localhost:1313/posts/template/template/">
-    <span class="title">« Prev</span>
-    <br>
-    <span>Template Text!</span>
-  </a>
-  <a class="next" href="http://localhost:1313/posts/house-projects/auto-roller-shades/">
-    <span class="title">Next »</span>
-    <br>
-    <span>Auto Roller Shade</span>
-  </a>
-</nav>
-
-  </footer>
+  <footer class="entry-footer"><span title='2024-07-04 00:00:00 +0000 +0000'>July 4, 2024</span></footer>
+  <a class="entry-link" aria-label="post link to Template Text!" href="http://localhost:1313/posts/template/template/"></a>
 </article>
     </main>
     
