--- a/public/posts/template/index.html
+++ b/public/posts/template/index.html
@@ -7,11 +7,46 @@
 <meta name="robots" content="noindex, nofollow">
 <title>Template Post | mike ornstein</title>
 <meta name="keywords" content="Template">
-<meta name="description" content="My Blog Post Here is an introductory paragraph with some bold text and some italic text.
-Heading 1 Heading 2 Heading 3 Heading 4 Heading 5 Heading 6 Standard Formatting This is strikethrough text.
-This is italic text. This is italic text.
-This is bold text. This is bold text.
-Lists Unordered Item 1 Item 2 Subitem 1 Subitem 2 Item 3 Ordered First item Second item Subitem 1 Subitem 2 Third item Quotes Here is a block quote:">
+<meta name="description" content="My Blog Post
+Here is an introductory paragraph with some bold text and some italic text.
+And here&rsquo;s a footnote1!
+Heading 1
+Heading 2
+Heading 3
+Heading 4
+Heading 5
+Heading 6
+Standard Formatting
+This is strikethrough text.
+This is italic text.
+This is italic text.
+This is bold text.
+This is bold text.
+Lists
+Unordered
+
+Item 1
+Item 2
+
+Subitem 1
+Subitem 2
+
+
+Item 3
+
+Ordered
+
+First item
+Second item
+
+Subitem 1
+Subitem 2
+
+
+Third item
+
+Quotes
+Here is a block quote:">
 <meta name="author" content="">
 <link rel="canonical" href="http://localhost:1313/posts/template/">
 <link crossorigin="anonymous" href="/assets/css/stylesheet.7d82250391d491e90093a23a90437ef30312064e4bd38f73c8fea2b6c0f498b0.css" integrity="sha256-fYIlA5HUkekAk6I6kEN&#43;8wMSBk5L049zyP6itsD0mLA=" rel="preload stylesheet" as="style">
@@ -134,7 +169,7 @@ Lists Unordered Item 1 Item 2 Subitem 1 Subitem 2 Item 3 Ordered First item Seco
         </svg>
       </span>
     </h1>
-    <div class="post-meta"><span title='2024-07-04 00:00:00 +0000 +0000'>July 4, 2024</span>
+    <div class="post-meta"><span title='2024-07-04 00:00:00 +0000 UTC'>July 4, 2024</span>
 
 </div>
   </header> 
@@ -225,7 +260,8 @@ Lists Unordered Item 1 Item 2 Subitem 1 Subitem 2 Item 3 Ordered First item Seco
 </div>
 
   <div class="post-content"><h1 id="my-blog-post">My Blog Post<a hidden class="anchor" aria-hidden="true" href="#my-blog-post">#</a></h1>
-<p>Here is an introductory paragraph with some <strong>bold</strong> text and some <em>italic</em> text.</p>
+<p>Here is an introductory paragraph with some <strong>bold</strong> text and some <em>italic</em> text.
+And here&rsquo;s a footnote<sup id="fnref:1"><a href="#fn:1" class="footnote-ref" role="doc-noteref">1</a></sup>!</p>
 <h1 id="heading-1">Heading 1<a hidden class="anchor" aria-hidden="true" href="#heading-1">#</a></h1>
 <h2 id="heading-2">Heading 2<a hidden class="anchor" aria-hidden="true" href="#heading-2">#</a></h2>
 <h3 id="heading-3">Heading 3<a hidden class="anchor" aria-hidden="true" href="#heading-3">#</a></h3>
@@ -279,22 +315,22 @@ This is <strong>bold</strong> text.</p>
 <p>Here is some <code>inline code</code>.</p>
 <h2 id="tables">Tables<a hidden class="anchor" aria-hidden="true" href="#tables">#</a></h2>
 <table>
-<thead>
-<tr>
-<th>Header 1</th>
-<th>Header 2</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td>Cell 1</td>
-<td>Cell 2</td>
-</tr>
-<tr>
-<td>Cell 3</td>
-<td>Cell 4</td>
-</tr>
-</tbody>
+  <thead>
+      <tr>
+          <th style="text-align: left">Header 1</th>
+          <th style="text-align: left">Header 2</th>
+      </tr>
+  </thead>
+  <tbody>
+      <tr>
+          <td style="text-align: left">Cell 1</td>
+          <td style="text-align: left">Cell 2</td>
+      </tr>
+      <tr>
+          <td style="text-align: left">Cell 3</td>
+          <td style="text-align: left">Cell 4</td>
+      </tr>
+  </tbody>
 </table>
 <h2 id="rules">Rules<a hidden class="anchor" aria-hidden="true" href="#rules">#</a></h2>
 <hr>
@@ -342,6 +378,14 @@ Like really fancy markdown in it!? <code>print(&quot;hello world&quot;)</code>
 </div>
 <div class="chat-right">
     It&rsquo;s #12345.
+</div>
+<div class="footnotes" role="doc-endnotes">
+<hr>
+<ol>
+<li id="fn:1">
+<p>look ma, a footnote!&#160;<a href="#fnref:1" class="footnote-backref" role="doc-backlink">&#x21a9;&#xfe0e;</a></p>
+</li>
+</ol>
 </div>
 
 
